--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap');
-
 * {
   text-decoration: none !important;
   outline: 0 !important;
@@ -1712,18 +1710,12 @@ body.font-big .intro p {
     padding: 6px;
     border: none;
     position: absolute;
-    top: 31px;
-    right: 15px;
-  }
-  .navbar-light .navbar-toggler {
-    padding: 6px;
-    border: none;
-    position: absolute;
     top: 18px;
     right: 0;
   }
   header {
     padding: 0;
+    padding-bottom:20px;
   }
   body.nav-act .navbar-collapse {
     top: 76px;
@@ -1966,9 +1958,6 @@ body.font-big .intro p {
   .navbar-light .navbar-toggler {
     padding: 6px;
     border: none;
-    position: absolute;
-    top: 31px;
-    right: 225px;
   }
 }
 
@@ -1984,6 +1973,20 @@ body.font-big .intro p {
   .dual-section .item {
     padding: 70px 50px;
   }
+}
+
+.nav-mob-phone {
+  background: #2661e4;
+  color: #fff;
+  position: absolute;
+  right: 40px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  font-size: 15px;
+  top: 17px;
+  border-radius: 5px;
 }
 
 @media only screen and (max-width: 767px) {
@@ -2069,19 +2072,6 @@ body.font-big .intro p {
   }
   .intro .inner {
     padding: 90px 0 0 30px;
-  }
-  .nav-mob-phone {
-    background: #2661e4;
-    color: #fff;
-    position: absolute;
-    right: 40px;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    font-size: 15px;
-    top: 17px;
-    border-radius: 5px;
   }
   .intro:before {
     content: '';
